Fix long text breaks on history. TG-2433 #ready-for-test

--- a/app/styles/modules/common/history.scss
+++ b/app/styles/modules/common/history.scss
@@ -35,6 +35,7 @@
     }
     .activity-fromto {
         @extend %small;
+        word-wrap: break-word;
     }
 }
 .history-tabs {
